--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/icon-font.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/shop.css">
 
     <!-- Javascript -->
     <script src="/js/script.js"></script>
@@ -38,11 +39,10 @@
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#new-release" class="navigation__link">New Release</a></li>
-                    <li class="navigation__item"><a href="#aboutus" class="navigation__link">About Us</a></li>
-                    <li class="navigation__item"><a href="#brands" class="navigation__link">Brands</a></li>
+                    <li class="navigation__item"><a href="#aboutus" class="navigation__link">Featured Kicks</a></li>
+                    <li class="navigation__item"><a href="#brands" class="navigation__link">Shop</a></li>
                     <li class="navigation__item"><a href="#feedback" class="navigation__link">Feedback</a></li>
-                    <li class="navigation__item"><a href="#signup" class="navigation__link">Sign Up</a></li>
+                    <li class="navigation__item"><a href="#signup" class="navigation__link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -58,15 +58,15 @@
                     <span class="heading-primary--main">Kicks"R"Us</span>
                     <span class="heading-primary--sub">Only the latest trend</span>
                 </h1>
-                <a href="#signup" class="btn btn--white btn-animated">Sign Up Now</a>
+                <a href="#brands" class="btn btn--white btn-animated">Shop Now</a>
             </div>
         </header>
 
         <main>
             <!-- About Section -->
-           <div class="section-about" id="new-release">
+           <div class="section-about" id="aboutus">
                 <div class="u-center-text u-margin-bottom-large">
-                    <h2 class="heading-secondary">Check out new release items!</h2>
+                    <h2 class="heading-secondary">Featured Kicks!</h2>
                 </div>
 
                 <div class="row">
@@ -81,7 +81,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsum voluptatibus! Alias tempore, expedita cum minus esse ut reiciendis sapiente labore minima reprehenderit. Aperiam, ad. Facilis ad iure reiciendis suscipit!
                         </p>
 
-                        <a href="#aboutus" class="btn-text">Learn more &rarr;</a>
+                        <a href="#features" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
@@ -95,7 +95,7 @@
            </section>
 
             <!-- Features Section -->
-           <section class="section-features" id="aboutus">
+           <section class="section-features" id="features">
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
@@ -141,7 +141,7 @@
 
             <!-- Cards Section-->
            <section class="section-kicks" id="brands">
-            <div class="u-center-text u-margin-bottom-large">
+            <div class="u-center-text u-margin-bottom-medium">
                 <h2 class="heading-secondary">Most Popular Brands</h2>
             </div>
 
@@ -157,7 +157,7 @@
                             </h4>
                             <div class="card__details">
                                 <ul>
-                                    <li>All Nike Selections</li>
+                                    <li>Top Nike Footwear</li>
                                     <li>Below Market Pricing</li>
                                     <li>Fast Shipping</li>
                                     <li>All Sizes Available</li>
@@ -170,7 +170,7 @@
                                     <p class="card__info-only">Member Discounts</p>
                                     <p class="card__info-value">While Supplies Last!</p>
                                 </div>
-                                <a href="#popup" class="btn btn--white">Order Now!</a>
+                                <a href="/shop.html" class="btn btn--white">Order Now!</a>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             </h4>
                             <div class="card__details">
                                 <ul>
-                                    <li>All Jordan Selections</li>
+                                    <li>Top Jordan Footwear</li>
                                     <li>Below Market Pricing</li>
                                     <li>Fast Shipping</li>
                                     <li>All Sizes Available</li>
@@ -200,7 +200,7 @@
                                     <p class="card__info-only">Member Discounts</p>
                                     <p class="card__info-value">While Supplies Last!</p>
                                 </div>
-                                <a href="#popup" class="btn btn--white">Order Now!</a>
+                                <a href="/shop.html" class="btn btn--white">Order Now!</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                             </h4>
                             <div class="card__details">
                                 <ul>
-                                    <li>All Adidas Selections</li>
+                                    <li>Top Adidas Footwear</li>
                                     <li>Below Market Pricing</li>
                                     <li>Fast Shipping</li>
                                     <li>All Sizes Available</li>
@@ -230,15 +230,15 @@
                                     <p class="card__info-only">Member Discounts</p>
                                     <p class="card__info-value">While Supplies Last!</p>
                                 </div>
-                                <a href="#popup" class="btn btn--white">Order Now!</a>
+                                <a href="/shop.html" class="btn btn--white">Order Now!</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="u-center-text u-margin-top-large">
-                <a href="#popup" class="btn btn--black">Check Out All Brands</a>
+            <div class="u-center-text u-margin-top-medium">
+                <a href="/shop.html" class="btn btn--black">View All Items</a>
             </div>
 
            </section>
@@ -253,7 +253,7 @@
                     Your browser is not supported!
                 </video>
             </div>
-            <div class="u-center-text u-margin-bottom-large">
+            <div class="u-center-text u-margin-bottom-medium">
                 <h2 class="heading-secondary">What our customers say about us</h2>
             </div>
             <div class="row">
@@ -286,8 +286,8 @@
                 </div>
             </div>
 
-            <div class="u-center-text u-margin-top-large">
-                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            <div class="u-center-text u-margin-top-medium">
+                <a href="#popup" class="btn-text">Read all stories &rarr;</a>
             </div>
 
            </section>
@@ -299,7 +299,7 @@
                     <div class="contact__form">
                         <form class="form" action="#">
                             <div class="u-margin-bottom-medium">
-                                <h2 class="heading-secondary">Become a member now!</h2>
+                                <h2 class="heading-secondary">Sign Up and Receive 30% Off!</h2>
                             </div>
                             <div class="form__group">
                                 <input type="text" class="form__input" placeholder="Name" id="name" required>
@@ -354,6 +354,7 @@
         </div>
     </footer>
     
+    <!-- Popup Window -->
     <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
@@ -367,11 +368,9 @@
                 <p class="popup__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui consequuntur ipsam expedita voluptate ad! Veniam dicta hic, dolor soluta perspiciatis ea porro quos sint expedita magnam sit ut dolores atque. Fugiat, veniam laudantium? Necessitatibus, dolorem numquam placeat adipisci minima, perspiciatis illum ad sapiente consequatur voluptatem error! Eum veniam consequuntur nemo temporibus ab numquam tenetur.
                 </p>
-                <a href="#" class="btn btn--black">Sign Up</a>
+                <a href="#signup" class="btn btn--black">Sign Up</a>
             </div>
         </div>
     </div>
-
-
     </body>
 </html>
